--- a/less/style.less
+++ b/less/style.less
@@ -5,7 +5,7 @@
 @import "fonts.less";
 
 // Import Blocks
-@import "blocks/bottom.less";
+//@import "blocks/bottom.less";
 @import "blocks/footer.less";
 @import "blocks/header.less";
 @import "blocks/page-contacts.less";
